--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@corluk/react-creator",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.01",
   "description": "",
   "main": "index.js",
-  "bin" : {
-    "create-react" : "./bin/create.js"
+  "bin": {
+    "create-react": "./bin/create.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
